--- a/1.html
+++ b/1.html
@@ -146,7 +146,8 @@ for the JavaScript code in this tag.
 <ul>
 <li><a href="#sec-1-1">Ohm's Law</a></li>
 <li><a href="#sec-1-2">Electrical Power</a></li>
-<li><a href="#sec-1-3">Resistance</a></li>
+<li><a href="#sec-1-3">Series and Parallel Resistance</a></li>
+<li><a href="#sec-1-4">Potential Divider</a></li>
 </ul>
 </li>
 <li><a href="#sec-2">2. Component Identification</a>
@@ -176,10 +177,19 @@ for the JavaScript code in this tag.
 </li>
 <li><b>Voltage</b>, is the difference in energy level between two points in a circuit, which will allow electrons to move through a conductor. The more difference in energy levels there is, the larger the amount of current can be drawn, and the larger item they can power. A basic red LED might only need 2.7V to run, whereas a laptop might need 24V, and a large electric motor moving a lift might need 415V to operate. 
 </li>
+</ul>
+<br>
+<ul class="org-ul">
 <li><b><b>Current</b></b> is a measure of how many electrons pass a particular point in the circuit per second. Higher current (<i>measured in Amps</i>) means faster electron flow in the circuit. The process of moving electrons through a material generates frictional heat. If the wire used in a product is too thin, and too much current passes through it, the wire will melt! This is the principal on which fuses are made. 
 </li>
+</ul>
+<br>
+<ul class="org-ul">
 <li><b><b>Resistance</b></b> is a measure of to what extent a material resists the flow of current in a circuit, and is measured in Ohms. Good conductors of electricity (like copper and gold) have very low resistance (1-2 &Omega;), and insulators (like rubber and plastic) have a high resistance (several million Ohms). 
 </li>
+</ul>
+<br>
+<ul class="org-ul">
 <li>Another explanation (with interactive demonstrations) can be seen <a href="https://www.bournetoinvent.com/projects/7-SC-Torch/pages/1_Lesson.html">here</a>.
 </li>
 <li>Another explanation of the concepts can be seen over at <a href="https://learn.sparkfun.com/tutorials/voltage-current-resistance-and-ohms-law">SparkFun</a>. 
@@ -191,7 +201,7 @@ for the JavaScript code in this tag.
 </ul>
 </li>
 </ul>
-
+<br>
 
 <ul class="org-ul">
 <li>In the exam, you'll sometimes be asked to calculate one of the values, given two of the others.
@@ -201,8 +211,7 @@ for the JavaScript code in this tag.
 <li>LEDs have very low internal resistance, and will blow instantaneously if they try and handle all too much current.
 </li>
 </ul>
-
-
+<br>
 <ul class="org-ul">
 <li>If we have a 6V potential difference in the circuit, we need to remove 3.5V (6V - 2.5V) from the circuit, to leave 2.5V for the LED. <b>V=2.5</b>
 </li>
@@ -218,13 +227,14 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </li>
-
+</ul>
+<br>
+<ul class="org-ul">
 <li>It turns out that 175Ω isn’t a standard resistor size we can buy, so we go to the next largest size, which is 180Ω (220Ω would also work here).
 </li>
 </ul>
 </div>
 </div>
-
 <div id="outline-container-sec-1-2" class="outline-3 try">
 <h3 id="sec-1-2">Electrical Power</h3>
 <div class="outline-text-3" id="text-1-2">
@@ -251,7 +261,7 @@ for the JavaScript code in this tag.
 </div>
 
 <div id="outline-container-sec-1-3" class="outline-3 learn">
-<h3 id="sec-1-3">Resistance</h3>
+<h3 id="sec-1-3">Series and Parallel Resistance</h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><b>Resistors in Series</b>
@@ -262,9 +272,16 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </li>
+<li>Example: Two resistors are connected together in series in a circuit. The colour codes on the first resistor is green, blue, black, gold. The colour code on the second resistor has been rubbed off. When a multi-meter is placed across both resistors, the meter reads 276Ω. What is the resistance of the unmarked resistor?
+<ul class="org-ul">
+<li>276 = 56 + R<sub>2</sub>
+</li>
+<li>R<sub>2</sub> = 276 - 56 = 220&Omega; 
+</li>
 </ul>
-
-
+</li>
+</ul>
+<br>
 <ul class="org-ul">
 <li><b>Resistors in Parallel</b>
 <ul class="org-ul">
@@ -272,7 +289,95 @@ for the JavaScript code in this tag.
 </li>
 </ul>
 </li>
-<li>CHANGE
+</ul>
+</div>
+</div>
+<div id="outline-container-sec-1-4" class="outline-3 learn">
+<h3 id="sec-1-4">Potential Divider</h3>
+<div class="outline-text-3" id="text-1-4">
+<ul class="org-ul">
+<li>A potential divider allows engineers to reduce the amount of voltage in a circuit. This is one of the most elemental circuits, and is used in various forms in PIC circuit design.
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/pot_div.png" alt="pot_div.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>V<sub>1</sub> = (R<sub>1</sub> / (R<sub>1</sub> + R<sub>2</sub>)) x Supply voltage (V<sub>S</sub>)
+</li>
+<li>V<sub>2</sub> = (R<sub>2</sub> / (R<sub>1</sub> + R<sub>2</sub>)) x Supply Voltage (V<sub>S</sub>)
+</li>
+</ul>
+<br>
+<ul class="org-ul">
+<li>By placing two resistors in series, different voltages can be achieved.
+</li>
+<li>This is handy when connecting analogue sensors to PIC chips. 
+</li>
+<li>It's also useful to put a PD before the base of a transistor (come back to this statement later in the course when you've covered more of the theory!) to trigger different components.
+<ul class="org-ul">
+<li>While only a low current is available (resistors reduce current flow), having an LDR (resistance increases as light level drops) and a fixed (usually 10k) resistor in a potential divider setup will allow varying amounts of voltage to be sent into the analogue pin of the PIC.
+</li>
+<li>The Genie PIC chips we have contain an 8-bit ADC (Analogue to Digital Convertor), which convert a voltage between 0-5V to a number between 0 and 255.
+</li>
+</ul>
+</li>
+</ul>
+
+<div class="figure">
+<p><img src="./img/ldr.png" alt="ldr.png" />
+</p>
+</div>
+<ul class="org-ul">
+<li>When the light level is very high (<i>1000 <a href="http://en.wikipedia.org/wiki/Lux">lux</a> in the shot above</i>), the resistance in the LDR drops to around 400&Omega;. As a result, most of the electrical energy in the potential divider will flow into the analogue input, as this is easier than having to travel through a 10k resistor. 
+</li>
+<li>In this case, is we asuming 400&Omega; of resistance through the LDR, and a 10k&Omega; resistor are forming a potential divider, we can use the first of the formulae shown above&#x2026;
+<ol class="org-ol">
+<li>V<sub>1</sub> = (R<sub>1</sub> / (R<sub>1</sub> + R<sub>2</sub>)) x Supply voltage (V<sub>S</sub>)
+</li>
+<li>V<sub>1</sub> = (10000 / (10000 + 400)) x 5
+</li>
+<li>V<sub>1</sub> = (10000 / 10400) x 5
+</li>
+<li>V<sub>1</sub> = 0.962 x 5
+</li>
+<li>V<sub>1</sub> = 4.81
+</li>
+</ol>
+</li>
+</ul>
+<br>
+<ul class="org-ul">
+<li>There would be a 4.81V potential difference at V<sub>1</sub>. 
+<ul class="org-ul">
+<li>The ADC will interpret this through a simple process&#x2026;
+<ul class="org-ul">
+<li>4.81 / 5 = 0.962 (5 is the input voltage for the PIC in this demo)
+</li>
+<li>0.962 * 255 = <b>245.31</b>
+</li>
+<li>So we report to the PIC chip that we've got an analogue reading of 245. 
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<br>
+<ul class="org-ul">
+<li>When the light level drops, the LDR's resistance will rise up to a few million Ohms. This will mean that by the time current has passed through the LDR, much of the energy will have been dissipated (in the form of heat), leaving a much smaller potential difference between the analogue input and 0V. The ADC will interpret this voltage as a low number.
+</li>
+</ul>
+<br>
+<ul class="org-ul">
+<li>Despite the temptation to do so, a PD  <b>isn't</b> suitable for creating power rails that need to power a load (e.g. Stepping down 12V to 3V to drive a motor), as all the current you'd need to draw will also have to pass through R<sub>2</sub> first. 
+
+<ul class="org-ul">
+<li>Further reading: <a href="https://dlnmh9ip6v2uc.cloudfront.net/r/600-600/assets/4/0/3/a/e/511948ffce395f7f47000000.png">Sparkfun</a>
+</li>
+</ul>
 </li>
 </ul>
 </div>
