--- a/1.html
+++ b/1.html
@@ -147,12 +147,20 @@ for the JavaScript code in this tag.
 <li><a href="#sec-1-1">Ohm's Law</a></li>
 <li><a href="#sec-1-2">Electrical Power</a></li>
 <li><a href="#sec-1-3">Series and Parallel Resistance</a></li>
-<li><a href="#sec-1-4">Potential Divider</a></li>
+<li><a href="#sec-1-4">The Potential Divider</a></li>
+<li><a href="#sec-1-5">Transistors</a></li>
 </ul>
 </li>
-<li><a href="#sec-2">2. Component Identification</a>
+<li><a href="#sec-2">2. Mechanisms</a>
 <ul>
-<li><a href="#sec-2-1">Past Paper Questions</a></li>
+<li><a href="#sec-2-1">Ratio of Simple Gears / Pulleys</a></li>
+<li><a href="#sec-2-2">Ratio of Simple Gears / Pulleys</a></li>
+<li><a href="#sec-2-3">Forces</a></li>
+</ul>
+</li>
+<li><a href="#sec-3">3. Practice questions</a>
+<ul>
+<li><a href="#sec-3-1">Recap</a></li>
 </ul>
 </li>
 </ul>
@@ -293,7 +301,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-1-4" class="outline-3 learn">
-<h3 id="sec-1-4">Potential Divider</h3>
+<h3 id="sec-1-4">The Potential Divider</h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li>A potential divider allows engineers to reduce the amount of voltage in a circuit. This is one of the most elemental circuits, and is used in various forms in PIC circuit design.
@@ -382,97 +390,78 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
+
+<div id="outline-container-sec-1-5" class="outline-3 learn">
+<h3 id="sec-1-5">Transistors</h3>
+<div class="outline-text-3" id="text-1-5">
+<ul class="org-ul">
+<li>Current Gain = Collector Current / Base Current
+</li>
+</ul>
 </div>
-
-
+</div>
+</div>
 <div id="outline-container-sec-2" class="outline-2 activity">
-<h2 id="sec-2"><span class="section-number-2">2</span> Component Identification</h2>
+<h2 id="sec-2"><span class="section-number-2">2</span> Mechanisms</h2>
 <div class="outline-text-2" id="text-2">
 </div>
 <div id="outline-container-sec-2-1" class="outline-3 learn">
-<h3 id="sec-2-1">Past Paper Questions</h3>
+<h3 id="sec-2-1">Ratio of Simple Gears / Pulleys</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
-<li>Before you can start to read circuit diagrams (and go on to create new ones), you'll need to be able to identify the basic electronic component symbols. These questions are from actual past exam papers, so are a great way to build your skill set&#x2026;
+<li>Gear Ratio = Number of teeth on driven gear / Number of teeth on driver gear
 </li>
-<li><b>June 2010, Q3</b>. You are advised to spend about 20 minutes on this question. This question is about identifying components and their uses.
+<li>Velocity Ratio = Diameter of driven pulley / Diameter of driver pulley
+</li>
+<li>Output Speed = Input speed /Gear (or velocity) ratio
 </li>
 </ul>
-
-<p>
-(a) For the following electronic components, give the component name and the electronic building block <i>(input, process or output)</i> it would be used for. <i>(10 marks)</i>
-</p>
-
-
-<div class="figure">
-<p><img src="./img/2010_q3.png" alt="2010_q3.png" />
-</p>
+</div>
 </div>
 
+<div id="outline-container-sec-2-2" class="outline-3 learn">
+<h3 id="sec-2-2">Ratio of Simple Gears / Pulleys</h3>
+<div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
-<li><b>June 2011, Q2</b>. You should spend about 20 minutes on this question. This question is about identifying components and stating if they are analogue or digital.
+<li>Mechanical Advantage
+</li>
+<li>Mechanical Advantage (MA) = Load / Effort
 </li>
 </ul>
-
-<p>
-(a) Give the Component name for the following electronic components, and tick the box to show whether a component is digital or analogue.
-</p>
-
-
-<div class="figure">
-<p><img src="./img/2011_q2.png" alt="2011_q2.png" />
-</p>
+</div>
 </div>
 
-<p>
-(b) Circle the method that MP3 players use to store music tracks.
-Analogue        Digital                FER                Logic        (1 mark)
-</p>
-
-<p>
-(c) Clocks can have either analogue or digital displays to show the time.
-2 (c) (i) Sketch a clock with an analogue display. (1 mark)
-</p>
-
-<p>
-2 (c) (ii) Sketch a clock with a digital display. (1 mark)
-</p>
-
-<p>
-(d) Electronic data can be recorded and stored in either digital or analogue format.
-</p>
-
-<p>
-2 (d) (i) Give one advantage of recording data in a digital format. (2 marks)
-</p>
-
-<p>
-2 (d) (ii) Give one advantage of recording data in an analogue format. (2 marks)
-</p>
-
-<p>
-<b>June 2012, Q5b</b>. This question is about a simple coffee vending machine. The hot water valve is controlled by the coffee vending machine control system. Name the most suitable component to operate the valve. (1 mark)
-</p>
-
-<p>
-<b>June 2012, Q6</b>. You are advised to spend about 15 minutes on this question. This question is about components. (a) Identify the following component symbols. <i>(6 marks)</i>
-</p>
-
-
-<div class="figure">
-<p><img src="./img/2012_q6.png" alt="2012_q6.png" />
-</p>
+<div id="outline-container-sec-2-3" class="outline-3 learn">
+<h3 id="sec-2-3">Forces</h3>
+<div class="outline-text-3" id="text-2-3">
+<ul class="org-ul">
+<li>Moments = Force x Distance
+</li>
+<li>Sum of clockwise moments = sum of anti-clockwise moments
+</li>
+</ul>
+</div>
+</div>
 </div>
 
-<p>
-<b>June 2012, Q6c</b>. Name this component. <i>(2 marks)</i>
-</p>
-
-
-<div class="figure">
-<p><img src="./img/2012_q6c.png" alt="2012_q6c.png" />
-</p>
+<div id="outline-container-sec-3" class="outline-2 activity">
+<h2 id="sec-3"><span class="section-number-2">3</span> Practice questions</h2>
+<div class="outline-text-2" id="text-3">
 </div>
+<div id="outline-container-sec-3-1" class="outline-3 learn">
+<h3 id="sec-3-1">Recap</h3>
+<div class="outline-text-3" id="text-3-1">
+<ol class="org-ol">
+<li>A 9v DC motor motor rated at 0.673A is to be powered by a 12v supply. What size resistor should be used to make it run at it’s maximum speed?
+</li>
+<li>i) A 60W lightbulb in a house is running on a standard 240v AC power supply. How much current does it draw?
+ii) UK fuses can be 1A, 3A, 5A or 13A. This refers to how much current can be drawn through the fuse without it “blowing”. What size fuse should be fitted to a 1600W hairdryer?
+</li>
+<li>A circuit being designed has a 12v supply, but needs a 3v rail, to be made with a potential divider. Suggest two resistor values that could provide this, and confirm it in circuit wizard.
+</li>
+<li>What’s the overall resistance achieved by connecting together 3 100Ω resistors in series in a circuit?
+</li>
+</ol>
 
 <p>
 <a href="index.html">Return to homepage</a>
