--- a/1.html
+++ b/1.html
@@ -166,8 +166,10 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div class=ribbon>
+<div class="github-fork-ribbon-wrapper left">
+<div class="github-fork-ribbon">
 <a href="https://github.com/stsb11/as_theory">Fork me on GitHub</a>
+</div>
 </div>
 <center>
 <imgzz src='' width=33%>
