--- a/index.html
+++ b/index.html
@@ -138,89 +138,92 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">AS Systems &amp; Control Theory</h1>
-<div class=ribbon>
+<div class="github-fork-ribbon-wrapper left">
+<div class="github-fork-ribbon">
 <a href="https://github.com/stsb11/as_theory">Fork me on GitHub</a>
+</div>
 </div>
 <center>
 <br>
 <img src=img/etch_tank.jpg width=25%>
 </center>
-<div id="outline-container-sec-1" class="outline-2 activity">
+
+<div id="outline-container-sec-1" class="outline-2 link-heading">
 <h2 id="sec-1"><a href="1.html">Lesson 01 - Mathematics</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
 </div>
-<div id="outline-container-sec-2" class="outline-2 activity">
+<div id="outline-container-sec-2" class="outline-2 link-heading">
 <h2 id="sec-2"><a href="2.html">Lesson 02 - Input Transducers</a></h2>
 <div class="outline-text-2" id="text-2">
 </div>
 </div>
-<div id="outline-container-sec-3" class="outline-2 activity">
+<div id="outline-container-sec-3" class="outline-2 link-heading">
 <h2 id="sec-3"><a href="3.html">Lesson 03 - Electrical Materials</a></h2>
 <div class="outline-text-2" id="text-3">
 </div>
 </div>
-<div id="outline-container-sec-4" class="outline-2 activity">
+<div id="outline-container-sec-4" class="outline-2 link-heading">
 <h2 id="sec-4"><a href="./4.html">Lesson 04 - Logic</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
 </div>
-<div id="outline-container-sec-5" class="outline-2 activity">
+<div id="outline-container-sec-5" class="outline-2 link-heading">
 <h2 id="sec-5"><a href="5.html">Lesson 05 - Advanced Electronics</a></h2>
 <div class="outline-text-2" id="text-5">
 </div>
 </div>
-<div id="outline-container-sec-6" class="outline-2 activity">
+<div id="outline-container-sec-6" class="outline-2 link-heading">
 <h2 id="sec-6"><a href="./6.html">Lesson 06 - Resistant Materials</a></h2>
 <div class="outline-text-2" id="text-6">
 </div>
 </div>
-<div id="outline-container-sec-7" class="outline-2 activity">
+<div id="outline-container-sec-7" class="outline-2 link-heading">
 <h2 id="sec-7"><a href="./7.html">Lesson 07 - Development of Design</a></h2>
 <div class="outline-text-2" id="text-7">
 </div>
 </div>
-<div id="outline-container-sec-8" class="outline-2 activity">
+<div id="outline-container-sec-8" class="outline-2 link-heading">
 <h2 id="sec-8"><a href="./8.html">Lesson 08 - Programming and Communication</a></h2>
 <div class="outline-text-2" id="text-8">
 </div>
 </div>
-<div id="outline-container-sec-9" class="outline-2 activity">
+<div id="outline-container-sec-9" class="outline-2 link-heading">
 <h2 id="sec-9"><a href="./9.html">Lesson 09 - Design in the Human Context</a></h2>
 <div class="outline-text-2" id="text-9">
 </div>
 </div>
-<div id="outline-container-sec-10" class="outline-2 activity">
+<div id="outline-container-sec-10" class="outline-2 link-heading">
 <h2 id="sec-10"><a href="./10.html">Lesson 10 - Industrial Processes</a></h2>
 <div class="outline-text-2" id="text-10">
 </div>
 </div>
-<div id="outline-container-sec-11" class="outline-2 activity">
+<div id="outline-container-sec-11" class="outline-2 link-heading">
 <h2 id="sec-11"><a href="./11.html">Lesson 11 - Systems &amp; Control</a></h2>
 <div class="outline-text-2" id="text-11">
 </div>
 </div>
-<div id="outline-container-sec-12" class="outline-2 activity">
+<div id="outline-container-sec-12" class="outline-2 link-heading">
 <h2 id="sec-12"><a href="./12.html">Lesson 12 - Information Technology</a></h2>
 <div class="outline-text-2" id="text-12">
 </div>
 </div>
-<div id="outline-container-sec-13" class="outline-2 activity">
+<div id="outline-container-sec-13" class="outline-2 link-heading">
 <h2 id="sec-13"><a href="./13.html">Lesson 13 - Design Questions</a></h2>
 <div class="outline-text-2" id="text-13">
 </div>
 </div>
-<div id="outline-container-sec-14" class="outline-2 activity">
+<div id="outline-container-sec-14" class="outline-2 link-heading">
 <h2 id="sec-14"><a href="./14.html">Exam Theory topic list</a></h2>
 <div class="outline-text-2" id="text-14">
 </div>
 </div>
-<div id="outline-container-sec-15" class="outline-2 activity">
-<h2 id="sec-15"><a href="http://www.aqa.org.uk/subjects/design-and-technology/gcse/design-and-technology-systems-and-control-technology-4565/past-papers-and-mark-schemes">AQA Past Exam papers</a></h2>
+<div id="outline-container-sec-15" class="outline-2 link-heading">
+<h2 id="sec-15"><a href="http://www.aqa.org.uk/subjects/design-and-technology/a-level/design-and-technology-systems-2555/past-papers-and-mark-schemes">AQA Past Exam papers</a></h2>
 <div class="outline-text-2" id="text-15">
 </div>
 </div>
-<div id="outline-container-sec-16" class="outline-2 activity">
+<div id="outline-container-sec-16" class="outline-2 link-heading">
 <h2 id="sec-16"><a href="./examples.html">Model Past Paper solutions</a></h2>
 <div class="outline-text-2" id="text-16">
 </div>
