--- a/4.html
+++ b/4.html
@@ -666,6 +666,13 @@ for the JavaScript code in this tag.
 <li>If I’m right in my guess, then gate 1 must be an OR gate, as its outputs result in Q going high when either A or B are high (or both of them at the same time). Let’s check this is the answer by drawing out the logic network in full, and completing the truth table…
 </li>
 </ul>
+
+
+<div class="figure">
+<p><img src="./img/2012_q4ii.png" alt="2012_q4ii.png" />
+</p>
+</div>
+
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -768,6 +775,97 @@ for the JavaScript code in this tag.
 <li>As the Q and check columns add up, we know we have the correct answer.
 </li>
 </ul>
+
+
+<ul class="org-ul">
+<li>You try: Complete the truth table for the logic circuit below. <i>(5 marks)</i>
+</li>
+</ul>
+
+
+<div class="figure">
+<p><img src="./img/sample.png" alt="sample.png" />
+</p>
+</div>
+
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="center" />
+
+<col  class="center" />
+
+<col  class="center" />
+
+<col  class="center" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="center">A</th>
+<th scope="col" class="center">B</th>
+<th scope="col" class="center">C</th>
+<th scope="col" class="center">Q</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="center">0</td>
+<td class="center">0</td>
+<td class="center">0</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">0</td>
+<td class="center">0</td>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">0</td>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">0</td>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 
@@ -775,8 +873,69 @@ for the JavaScript code in this tag.
 <h3 id="sec-2-2">Past Paper Questions</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
-<li></li>
+<li><b>Specimen Paper, Q5.</b> A hot drinks vending machine has a water tank containing a water level sensor that gives a HIGH output if there is water in the tank. The machine has two buttons, one for coffee and one for tea, both giving a HIGH output when pressed. The machine’s control system should send a HIGH output to a valve if there is water in the tank and one of the two buttons are pressed, but not if both buttons are pressed at the same time.
+
+<ul class="org-ul">
+<li>(a) Draw a truth table for the above system.         <i>(4 marks)</i>
+</li>
+<li>(b) Design a logic diagram for this control system.  <i>(8 marks)</i>
+</li>
+<li>(c) During the development of this control system the designer could test the operation of the circuit by either prototyping using real components or by simulating the operation of the system using a computer software package. Compare and contrast these two methods of testing logic systems. <i>(2x 4 marks)</i>
+</li>
 </ul>
+</li>
+
+<li><b>June 2011, Q4(a).</b> Complete the truth table for the circuit shown below. <i>(5 marks)</i>
+</li>
+</ul>
+
+
+<div class="figure">
+<p><img src="./img/2011_q4.png" alt="2011_q4.png" />
+</p>
+</div>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="center" />
+
+<col  class="center" />
+
+<col  class="center" />
+
+<col  class="center" />
+</colgroup>
+<tbody>
+<tr>
+<td class="center">A</td>
+<td class="center">B</td>
+<td class="center">C</td>
+<td class="center">Q</td>
+</tr>
+
+<tr>
+<td class="center">0</td>
+<td class="center">0</td>
+<td class="center">0</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center">0</td>
+<td class="center">0</td>
+<td class="center">1</td>
+<td class="center">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="center"><i>etc</i></td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+<td class="center">&#xa0;</td>
+</tr>
+</tbody>
+</table>
 
 <p>
 <a href="index.html">Return to homepage</a>
