--- a/index.html
+++ b/index.html
@@ -144,10 +144,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <center>
-<br>
-<img src=img/etch_tank.jpg width=25%>
+<img src=img/pencil.png width=70%>
 </center>
-
 <div id="outline-container-sec-1" class="outline-2 link-heading">
 <h2 id="sec-1"><a href="1.html">Lesson 01 - Mathematics</a></h2>
 <div class="outline-text-2" id="text-1">
@@ -219,7 +217,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-15" class="outline-2 link-heading">
-<h2 id="sec-15"><a href="./14.html">Exam Theory topic list</a></h2>
+<h2 id="sec-15"><a href="./theory.doc">Exam Theory topic list</a></h2>
 <div class="outline-text-2" id="text-15">
 </div>
 </div>
