--- a/11.html
+++ b/11.html
@@ -166,7 +166,7 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <center>
-<img src='./img/steel.jpg' width=40%>
+<img src='http://laserprouk.com/images/laser-x252-large-image.jpg' width=40%>
 </center>
 
 <div id="outline-container-sec-1" class="outline-2 activity">
