--- a/examples.html
+++ b/examples.html
@@ -154,8 +154,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-3" class="outline-2 link-heading">
-<h2 id="sec-3"><a href="./index.html">Return to homepage</a></h2>
+<h2 id="sec-3"><a href="examples/2011.pdf">June 2011 Paper</a></h2>
 <div class="outline-text-2" id="text-3">
+</div>
+</div>
+<div id="outline-container-sec-4" class="outline-2 link-heading">
+<h2 id="sec-4"><a href="./index.html">Return to homepage</a></h2>
+<div class="outline-text-2" id="text-4">
 </div>
 </div>
 </div>
