--- a/examples.html
+++ b/examples.html
@@ -159,8 +159,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-4" class="outline-2 link-heading">
-<h2 id="sec-4"><a href="./index.html">Return to homepage</a></h2>
+<h2 id="sec-4"><a href="examples/2012.pdf">June 2012 Paper</a></h2>
 <div class="outline-text-2" id="text-4">
+</div>
+</div>
+<div id="outline-container-sec-5" class="outline-2 link-heading">
+<h2 id="sec-5"><a href="./index.html">Return to homepage</a></h2>
+<div class="outline-text-2" id="text-5">
 </div>
 </div>
 </div>
