--- a/examples.html
+++ b/examples.html
@@ -164,8 +164,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 <div id="outline-container-sec-5" class="outline-2 link-heading">
-<h2 id="sec-5"><a href="./index.html">Return to homepage</a></h2>
+<h2 id="sec-5"><a href="examples/2013.pdf">June 2013 Paper</a></h2>
 <div class="outline-text-2" id="text-5">
+</div>
+</div>
+<div id="outline-container-sec-6" class="outline-2 link-heading">
+<h2 id="sec-6"><a href="./index.html">Return to homepage</a></h2>
+<div class="outline-text-2" id="text-6">
 </div>
 </div>
 </div>
